# deduction_game

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  a.css  index.html  memo.md  records.jsonl
.repo/: config.toml  user.toml
crates/cli/: Cargo.toml
crates/cli/src/: host.rs  lib.rs
crates/game/: Cargo.toml
crates/game-ai/: Cargo.toml
crates/game-ai/entropy/: Cargo.toml
crates/game-ai/random/: Cargo.toml
crates/game-ai/random/src/: lib.rs
crates/game-ai/search/: Cargo.toml
crates/game-ai/search/src/: lib.rs
crates/game-ai/src/: agent.rs  lib.rs
crates/game-ai/src/agent/: entropy.rs  random.rs  unfair.rs
crates/game-ai/unfair/: Cargo.toml
crates/game-ai/unfair/src/: lib.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: abstract_game.rs  config.rs  defs.rs  lib.rs  utils.rs
crates/game-stats/: Cargo.toml  memo.md
crates/game-stats/scripts/: README.md  plot_winrates.py  summarize.py  winrates.plt
crates/game-stats/src/: lib.rs  main.rs
crates/game/src/: agent.rs  lib.rs
crates/web/: Cargo.toml
crates/web/assets/: app.js  index.html  styles.css
crates/web/src/: lib.rs  main.rs
src/: abstract_game.rs  agent.rs  defs.rs  lib.rs  utils.rs
