[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
indicatif = "0.17.9"
itertools = "0.13.0"
plotters = "0.3.7"
proconio = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
yew = { version = "0.21.0", features = ["csr"] }
