[package]
name = "game-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
game-ai-random = { path = "../game-ai/random" }
game-ai-entropy = { path = "../game-ai/entropy" }
game-ai-search = { path = "../game-ai/search" }
game-ai-unfair = { path = "../game-ai/unfair" }
game-core = { path = "../game-core" }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
