[package]
name = "game-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game-ai = { path = "../game-ai" }
game-core = { path = "../game-core" }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.95"
